fix select cropping

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -310,7 +310,7 @@ select {
   background-color: #FFFFFF;
   border: 1px solid #CCCCCC;
   display: block;
-  padding: 12px;
+  padding: 11px;
   outline: none;
   resize: none;
   -webkit-box-sizing: border-box;
