--- a/assets/sass/_global.scss
+++ b/assets/sass/_global.scss
@@ -209,7 +209,7 @@ select {
     background-color: $white;
     border: 1px solid $gray-3;
     display: block;
-    padding: 12px;
+    padding: 11px;
     outline: none;
     resize: none;
     -webkit-box-sizing: border-box;
